manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: #{serviceName}#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #{serviceName}#
  template:
    metadata:
      labels:
        app: #{serviceName}# 
    spec:
      containers:
        - name: #{imageRepository}# 
          image: heartburstacr.azurecr.io/#{imageRepository}#
          ports:
          - containerPort: 3000
