manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: #{serviceName}#
spec:
  type: NodePort
  selector:
    app: #{serviceName}#
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3000
      targetPort: 3000
